src/objects/Agency_Service_Providers__mdt.object
<CustomObject>
    <fields>
        <fullName>Agency_Field__c</fullName>
        <label>Agency Field</label>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Agency_Service_Providerss</relationshipLabel>
        <relationshipName>Agency_Service_Providerss</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Agency_Owner_Email__c</fullName>
        <label>Agency Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <label>Object Type</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Agency_Service_Providerss</relationshipLabel>
        <relationshipName>Agency_Service_Providerss</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>Agency Service Provider</label>
    <pluralLabel>Agency Service Providers</pluralLabel>
</CustomObject>